--- a/pertemuan-04/style.css
+++ b/pertemuan-04/style.css
@@ -31,8 +31,8 @@ header li a {
   padding: 6px 12px;
 }
 
-
-#about,
+        #home,
+        #about,
         #contact {
             background-color: #ffffff;
             border-radius: 10px;
@@ -42,6 +42,7 @@ header li a {
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
+        #home h2,
         #about h2,
         #contact h2 {
             color: #003366;
@@ -49,6 +50,10 @@ header li a {
             padding-bottom: 6px;
             margin-top: 0;
             margin-bottom: 16px;
+        }
+
+        #home p {
+          text-align: justify;
         }
 
         #about p,
