--- a/pertemuan-04/style.css
+++ b/pertemuan-04/style.css
@@ -31,6 +31,13 @@ header li a {
   padding: 6px 12px;
 }
 
+footer {
+  background: #222;
+  Color: #aaa;
+  text-align: center;
+  padding: 10px;
+}
+
         #home,
         #about,
         #contact {
