--- a/pertemuan-05/style.css
+++ b/pertemuan-05/style.css
@@ -194,6 +194,10 @@ footer {
             padding: 5px 0;
           }
 
+          nav.active {
+            display: flex;
+          }
+
           header {
             padding: 16px;
             position: sticky;
