--- a/pertemuan-06/style.css
+++ b/pertemuan-06/style.css
@@ -121,14 +121,30 @@ footer {
   border-bottom: 1px solid #e6e6e6;
 }
 
+#ipk p {
+  display: flex;
+  justify-content: flex-start;
+  align-items: baseline;
+  margin: 0;
+  padding: 2px 0;
+}
+
 #about strong,
-#contact label>span,
-#ipk strong {
+#contact label>span {
   min-width: 180px;
   color: #003366;
   font-weight: 600;
   text-align: right;
   padding-right: 16px;
+  flex-shrink: 0;
+}
+
+#ipk strong {
+  min-width: 150px;
+  color: #003366;
+  font-weight: 600;
+  text-align: left;
+  padding-right: 6px;
   flex-shrink: 0;
 }
 
