Menambahkan section IPK dan mengerjakan sesuai panduan video TI1B

--- a/pertemuan-06/style.css
+++ b/pertemuan-06/style.css
@@ -232,13 +232,15 @@ footer {
   }
 
   #about p,
-  #contact label {
+  #contact label,
+  #ipk p {
     flex-direction: column;
     align-items: flex-start;
   }
 
   #about strong,
-  #contact label>span {
+  #contact label>span,
+  #ipk strong {
     text-align: left;
     padding-right: 0;
     margin-bottom: 2px;
