--- a/pertemuan-07/style.css
+++ b/pertemuan-07/style.css
@@ -51,7 +51,8 @@ header li a:active {
 
 #home:target~header nav a[href="#home"],
 #about:target~header nav a[href="#about"],
-#contact:target~header nav a[href="#contact"] {
+#contact:target~header nav a[href="#contact"],
+#ipk:target~header nav a[href="#ipk"] {
   background: #fff;
   color: #003366;
   font-weight: bold;
@@ -61,7 +62,8 @@ header li a:active {
 
 #home,
 #about,
-#contact {
+#contact,
+#ipk {
   background-color: #ffffff;
   border-radius: 10px;
   padding: 20px;
@@ -72,7 +74,8 @@ header li a:active {
 
 #home h2,
 #about h2,
-#contact h2 {
+#contact h2,
+#ipk h2 {
   color: #003366;
   border-bottom: 2px solid #003366;
   padding-bottom: 6px;
@@ -85,7 +88,8 @@ header li a:active {
 }
 
 #about p,
-#contact label {
+#contact label,
+#ipk p {
   display: flex;
   justify-content: flex-start;
   align-items: baseline;
@@ -95,7 +99,8 @@ header li a:active {
 }
 
 #about strong,
-#contact label>span {
+#contact label>span,
+#ipk strong {
   min-width: 180px;
   color: #003366;
   font-weight: 600;
@@ -216,13 +221,15 @@ footer {
   }
 
   #about p,
-  #contact label {
+  #contact label,
+  #ipk p {
     flex-direction: column;
     align-items: flex-start;
   }
 
   #about strong,
-  #contact label>span {
+  #contact label>span,
+  #ipk strong {
     text-align: left;
     padding-right: 0;
     margin-bottom: 2px;
